# schematics-utils

./: .bazelrc  .gitignore  README.md  WORKSPACE  package.json  tsconfig.json
src/: BUILD  BUILD.bazel  collection.json  package.json
src/add/: index.ts  index_spec.ts  schema.json  schema.ts
src/add/files/__schematicsPath__/ng-add/: index.ts.template  index_spec.ts.template
src/add/files/ng-add/: index.ts.template  index_spec.ts.template  schema.json.template
src/collection/: index.ts
src/collection/files/: tsconfig.schematics.json.template
src/collection/files/__schematicsPath__/: collection.json.template
src/migration/: index.ts  index_spec.ts
src/schematic/: index.ts  schema.json  schema.ts
src/schematic/files/__schematicsPath__/__name@dasherize__/: index.ts.template  index_spec.ts.template  schema.json.template  schema.ts.template
src/utility/: collection.ts  index.ts  json.ts  package-json.ts
src/utility/testing/: workspace.ts
